<resources>
    <string name="app_name">FreeRun</string>
    <string name="SignUpText">Sign Up</string>
    <string name="LoginText">Log in</string>
    <string name="AppNameText">FreeRun</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignUpFormText">Create an account</string>
    <string name="PasswordInfoText">Password information</string>
    <string name="LoginInFormText">Log in to FreeRun</string>
    <string name="CloseText">Close</string>
    <string name="PasswordInformationMessage">- The password must be 8-16 characters long. \n- The password must contain one lowercase letter. \n- The password must contain one uppercase letter. \n- The password must contain a single digit from 1 to 9. \n- The password must contain one special character.</string>
    <string name="ErrorSignUpTitle">Error during registration</string>
    <string name="ErrorSignUpMessage">Check the fields entered, verify that the password meets security requirements</string>
    <string name="ErrorLogInTitle">Error during Log in</string>
    <string name="ErrorLogInMessage">Check the fields entered</string>
    <string name="WeightTextInfo">Enter your weight</string>
    <string name="WeightText">Inserted weight:</string>
    <string name="WeightInfoMessage">During registration, weight is requested in order to correctly calculate the calories consumed during the run.</string>
    <string name="WeightInfoTitle">Weight</string>
    <string name="ActivityText">Activities</string>
    <string name="RunText">Run</string>
    <string name="ProfileText">Profile</string>
    <string name="StartRunText">START</string>
    <string name="EndActivityBtn">End activity</string>
    <string name="EndActivtyMessage">Finish the activity ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="TimeText">Time</string>
    <string name="KilometersText">Kilometers</string>
    <string name="CaloriesText">Kilocalories</string>
    <string name="AvgPaceText">Avg Pace</string>
    <string name="SaveText">Save</string>
    <string name="DistanceText">Distance</string>
    <string name="ManText">Man</string>
    <string name="WomanText">Woman</string>
    <string name="DeleteActivityMessage">Do you want to eliminate the activity ?</string>
    <string name="GenderInfoText">Select your gender</string>
    <string name="GenderText">Gender</string>
    <string name="NotificationText">Notifications</string>
    <string name="LocationText">Location</string>
    <string name="PhysicalActivityText">Physical activity</string>
    <string name="PersonalInformationText">Personal Information</string>
    <string name="SettingsText">Settings</string>
    <string name="EditText">Edit</string>
    <string name="LogOutText">Log Out</string>
    <string name="LogOutMessage">Want to log out from FreeRun ?</string>
    <string name="DoneText">Done</string>
    <string name="WorkoutDetails">Workout Details</string>
    <string name="DeleteRunMessage">Do you want to eliminate the run ?</string>
    <string name="DeleteText">Delete</string>
    <string name="LocationPermissionsTitle">Location permissions</string>
    <string name="LocationPermissionsText">Location permission are required to allow FreeRun to track your location during your run, if not granted you will not be able to view your route during the run, and if your device does not have motion sensors, you will also not be able to track other data such as distance and kilocalories.</string>
    <string name="ContinueText">Continue</string>
    <string name="ActivityRecognitionPermissionTitle">Activity recognition permission</string>
    <string name="ActivityRecognitionPermissionText">Permissions for activity recognition are required to allow FreeRun to track the motor activity for proper calculation of the distance covered. If not granted, the distance run is calculated less accurately using location.</string>
    <string name="NotificationPermissionTitle">Notification permission</string>
    <string name="NotificationPermissionText">Notification permission are required to allow FreeRun to notify the start of each run, and to allow the user to view the run data even when the device is in the background.</string>
    <string name="ActivityReconigtionInfoText">If the device does not have sensors for detecting motor activity, the distance traveled will be calculated using the location, therefore it is recommended to grant location permissions.</string>
    <string name="NoActivitySensorTitle">Activity sensor not detected</string>
    <string name="NoRunsText">No runs found</string>
    <string name="NoRunsMessage">Go to the running section and start one now!</string>
</resources>