<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_toast_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp">

    <TextView
        android:id="@+id/endActivityDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EndActivtyMessage"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/closeEndActivityDialogButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/endActivityDialognButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>