<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:text="@string/SignUpFormText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/Name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignUp"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/textViewSignUp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailSignUp"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/Email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/nameTextField"
        app:layout_constraintStart_toStartOf="@+id/nameTextField"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUp"
        android:layout_width="379dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:hint="@string/Password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/emailSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailSignUp"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textPasswordInfo"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/PasswordInfoText"
        android:drawablePadding="5dp"
        app:drawableRightCompat="@drawable/information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" />

    <TextView
        android:id="@+id/weightTextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/WeightTextInfo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        app:drawableRightCompat="@drawable/information"
        app:layout_constraintStart_toStartOf="@+id/textPasswordInfo"
        app:layout_constraintTop_toBottomOf="@+id/textPasswordInfo" />

    <com.google.android.material.slider.Slider
        android:id="@+id/weightSlider"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:stepSize="0.10"
        android:valueFrom="10.0"
        android:valueTo="300.0"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/SignUpText"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUp"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/weightSlider" />

    <Button
        android:id="@+id/closeSignUpButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/WeightText"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextInfo" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="10 Kg"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/weightTextInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>